Correction alignement titres, footer, icones + fusion des fichiers CSS + déplacement des polices dans le fichier style

--- a/styles/css_pages.css
+++ b/styles/css_pages.css
@@ -14,7 +14,7 @@
   }
 
 
-    header{
+    .header_pages{
         display: flex;
         flex-direction: row;
         justify-content: center;
